# sajucandle

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PHASE4_HANDOVER.md  Procfile  README.md  pyproject.toml  railway.toml
.github/workflows/: ci.yml
data/manseryeok/: calendar_data_v1.csv
data/solar_terms/: comparison_2020_2030.json  solar_terms_1900_2100.json  solar_terms_2020_2030.json
data/tickers/: coin_universe_15.csv  sample_tickers.csv  stock_universe_30.csv
docs/archive/pre_phase4/: _build_spec_pdf.py  master plan.docx
docs/guides/: owner_usage.md  phase5_telegram_setup.md
docs/planning/prompts/: phase2_prompt.md
docs/planning/research/: phase5_transport_current_state.md
docs/superpowers/plans/: 2026-04-15-week1-bot-bootstrap.md  2026-04-16-week2-fastapi-redis.md  2026-04-16-week3-saju-score.md  2026-04-16-week4-chart-signal.md  2026-04-17-week6-us-stocks.md  2026-04-17-week7-watchlist.md  2026-04-19-week10-phase1-observability.md  2026-04-19-week8-analysis-engine.md  2026-04-19-week9-sr-tradesetup.md  2026-04-22-phase2-implementation-plan.md  2026-04-24-phase5-transport-plan.md
docs/superpowers/specs/: 2026-04-15-python-ts-engine-strategy-design.md  (+6 more)
migrations/: 001_init.sql  002_watchlist.sql  003_signal_log.sql  004_signal_log_tradesetup.sql  005_signal_log_run_id.sql  006_signal_log_direction.sql
src/sajucandle/: api.py  api_client.py  api_main.py  bot.py  broadcast.py  cache.py  cached_engine.py  db.py  format.py  handlers.py  market_data.py  models.py  repositories.py  saju_engine.py  score_service.py  signal_service.py  tech_analysis.py
tests/: conftest.py  smoke_output_backtest.json  smoke_output_calibrated.json  smoke_output_coin_v2.json  smoke_output_email.html  smoke_output_fa.json  smoke_output_full_pipeline.json  smoke_output_macro.json  smoke_output_nulltest_v2.json  smoke_output_onchain.json  smoke_output_oos_validation.json  smoke_output_phase2.json  smoke_output_ranker_small.json  smoke_output_regime_engine.json  smoke_output_saju_v2.json  smoke_output_scoring.json  smoke_output_signal_engine.json  smoke_output_stock_backtest.json  smoke_output_ta.json  smoke_test_backtest.py  smoke_test_calibrated.py  smoke_test_coin_v2.py  smoke_test_daeun.py  smoke_test_fa.py  smoke_test_forked_engine.py  smoke_test_full_pipeline.py  smoke_test_macro.py  smoke_test_nulltest_v2.py  smoke_test_onchain.py  smoke_test_oos_validation.py  smoke_test_phase2.py  smoke_test_ranker.py  smoke_test_ranker_small.py  smoke_test_regime_engine.py  smoke_test_renderer.py  smoke_test_saju_scoring.py  smoke_test_saju_v2.py  smoke_test_sajupy.py  smoke_test_signal_engine.py  smoke_test_stock_backtest.py  (+48 more)
tests/smoke_output/: results.json
tests/smoke_output_forked/: results.json
tests/snapshots/: phase2_longside_baseline.json
tools/: build_manseryeok_csv.py  compare_solar_terms.py  compute_solar_terms.py  cross_validate_day_pillar.py  verify_day_pillar.py
(+64 files in other folders)
