[project]
name = "sajucandle"
version = "0.2.0"
description = "SajuCandle - 월간 Saju-filtered quant signal engine (Phase 4)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.0,<3.0",
    "httpx>=0.27",
    "yfinance>=0.2.40,<0.3",
    "pandas>=2.2,<3.0",
    "numpy>=1.26,<3.0",
    "geopy>=2.4,<3.0",
    "apscheduler>=3.10,<4.0",
    "ta>=0.11,<0.12",
    "ccxt>=4.2,<5.0",
    "requests>=2.31,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
calibration = [
    "scipy>=1.11",
    "scikit-learn>=1.3",
]
tools = [
    "skyfield>=1.49",
    "lunar-python>=1.4.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sajucandle"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# Phase 4 이식 코드 스타일 수용 — pyflakes(F*)는 엄격 유지, pycodestyle(E*)는 선택적 완화
select = ["F", "E4", "E7", "E9", "W6"]
ignore = [
    "E701",  # multiple statements on one line (colon)
    "E402",  # module-level import not at top of file
    "E741",  # ambiguous variable name
]
